--- a/.development.env
+++ b/.development.env
@@ -1,7 +1,8 @@
 # copy content to .env in root dir
 DATABASE_TYPE=postgres
-DATABASE_HOST=localhost # your own host
-DATABASE_PORT=5432 # your own port
+# host where your database running
+DATABASE_HOST=localhost 
+DATABASE_PORT=5432 
 DATABASE_USER=postgres
 DATABASE_PASS=your-password
 DATABASE_DATABASE=your-database
